--- a/DataStructuresLib/DataStructuresLib.vcxproj.filters
+++ b/DataStructuresLib/DataStructuresLib.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="BinaryTreeNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Stack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
