--- a/DataSrtucturesLibTests/DataSrtucturesLibTests.vcxproj
+++ b/DataSrtucturesLibTests/DataSrtucturesLibTests.vcxproj
@@ -38,6 +38,7 @@
     <ClInclude Include="..\DataStructuresLib\DoublyLinkedList.h" />
     <ClInclude Include="..\DataStructuresLib\LinkedListNode.h" />
     <ClInclude Include="..\DataStructuresLib\List.h" />
+    <ClInclude Include="..\DataStructuresLib\Queue.h" />
     <ClInclude Include="..\DataStructuresLib\Stack.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
@@ -52,6 +53,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="QueueTests.cpp" />
     <ClCompile Include="StackTests.cpp" />
   </ItemGroup>
   <ItemGroup>
