--- a/DataStructuresLib/DataStructuresLib.vcxproj
+++ b/DataStructuresLib/DataStructuresLib.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="LinkedListNode.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
   <ItemGroup>
